--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,6 +39,7 @@ a{
   padding: 0 1rem;
   border-bottom: var(--border);
 }
+
 .navbar-nav{
   max-width: 100%;
   height: 100%;
@@ -53,8 +54,8 @@ a{
   justify-content: center;
 }
 
-/*ikonica dugme*/
-.ikonica-button{
+/*icon dugme*/
+.icon-button{
  --button-size: calc(var(--nav-size)*0.5);
  width: var(--button-size);
  height: var(--button-size);
@@ -67,11 +68,58 @@ a{
  justify-content: center;
  transition: filter 300ms;
 }
-.ikonica-button:hover{
+
+.icon-button:hover{
   filter: brightness(1.2);
 }
-.ikonica-button svg {
+
+.icon-button svg {
   fill: var(--text-color);
   width: 20px;
   height: 20px;
+}
+
+.dropdown {
+  position: absolute;
+  top: 58px;
+  width: 300px;
+  transform: translateX(-45%);
+  background-color: var(--bg);
+  border: var(--border);
+  border-radius: var(--boarder-radius);
+  padding: 1rem;
+  overflow: hidden;
+}
+
+.menu-item{
+height: 50px;
+display: flex;
+align-items: center;
+border-radius: var(--boarder-radius);
+transition: background var(--speed);
+padding: 0.5rem;
+}
+
+.menu-item:hover{
+  background-color: #525357;
+}
+
+.icon-right{
+  margin-left: auto;
+}
+
+.menu-primary-enter{
+
+}
+
+.menu-primary-enter-active{
+
+}
+
+.menu-primary-exit{
+
+}
+
+.menu-primary-exit-active{
+  
 }
