--- a/client/src/index.css
+++ b/client/src/index.css
@@ -89,6 +89,8 @@ a{
   border-radius: var(--boarder-radius);
   padding: 1rem;
   overflow: hidden;
+
+  transition: height var(--speed) ease;
 }
 
 .menu-item{
@@ -109,17 +111,46 @@ padding: 0.5rem;
 }
 
 .menu-primary-enter{
+  position: absolute;
+  transform: translateX(-110%);
 
 }
 
 .menu-primary-enter-active{
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
 
 }
 
 .menu-primary-exit{
+  position: absolute;
 
 }
 
 .menu-primary-exit-active{
+  transform: translateX(-110%);
+  transition: all var(--speed) ease;
   
+}
+
+.menu-secondary-enter{
+  transform: translateX(110%);
+
+}
+
+.menu-secondary-enter-active{
+  transform: translateX(0%);
+  transition: all var(--speed) ease;
+
+}
+
+.menu-secondary-exit{
+  
+
+}
+
+.menu-secondary-exit-active{
+  transform: translateX(110%);
+  transition: all var(--speed) ease;
+
 }
