--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,9 +13,9 @@ code {
 }
 
 :root {
-  --bg: #242526;
-  --bg-accent: #484a4d;
-  --text-color: #dadce1;
+  --bg: #eff2f5;
+  --bg-accent: #f0f2f3;
+  --text-color: #444343;
   --nav-size: 60px;
   --border: 1px solid #474a4d;
   --boarder-radius: 8px;
@@ -48,7 +48,7 @@ a{
 }
 
 .nav-item{
-  width: calc(var(--nav-size)*0.8);
+  width: var(--nav-size);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -59,7 +59,7 @@ a{
  --button-size: calc(var(--nav-size)*0.5);
  width: var(--button-size);
  height: var(--button-size);
- background-color: #484a4d;
+ background-color: #ffffff;
  border-radius: 50%;
  padding: 5px;
  margin: 2px;
@@ -103,7 +103,7 @@ padding: 0.5rem;
 }
 
 .menu-item:hover{
-  background-color: #525357;
+  background-color: #cccccc;
 }
 
 .icon-right{
