--- a/client/src/Components/ProfilnaStranica/Fotografije.css
+++ b/client/src/Components/ProfilnaStranica/Fotografije.css
@@ -40,3 +40,21 @@
   margin-bottom: 10px;
   border-radius: 10px;
 }
+
+.divFoto > img:hover {
+  filter: grayscale(0.5);
+  cursor: pointer;
+}
+
+.prikazSlike {
+  z-index: 101;
+  height: 300px;
+  width: 300px;
+}
+
+.prikazSlike > img {
+  width: 160px;
+  height: 160px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
