--- a/client/src/Components/Novosti/Postavi.css
+++ b/client/src/Components/Novosti/Postavi.css
@@ -1,4 +1,4 @@
-.messageSender {
+.postavi {
     display: flex;
     margin-top: 30px;
     flex-direction: column;
@@ -8,18 +8,19 @@
     width: 100%;
 }
 
-.messageSender__top {
+.postavi__vrh {
     display: flex;
     border-bottom:  1px solid #eff2f5;
+    padding-bottom: 15px;
     padding: 15px;
 }
 
-.messageSender__top>form {
+.postavi__vrh>form {
     flex: 1;
     display: flex;
 }
 
-.messageSender__top>form>input {
+.postavi__vrh>form>input {
     outline-width: 0;
     border: none;
     padding: 5px 20px;
@@ -29,11 +30,12 @@
 }
 
 
-.messageSender__fileSelector {
+.postavi__fajl {
     width: 20%;
 }
 
-.messageSender__top>form>button {
+.postavi__vrh>form>button {
+    display: none;
     height: 0;
     width: 0;
     background-color: transparent;
@@ -41,16 +43,16 @@
     border: none;
 }
 
-.messageSender__input {
+.postavi__unos {
     flex: 1;
 }
 
-.messageSender__bottom {
+.postavi__dno {
     display: flex;
     justify-content: space-evenly;
 }
 
-.messageSender__option {
+.postavi__dugme {
     padding: 20px;
     display: flex;
     align-items: center;
@@ -58,12 +60,12 @@
     margin: 5px;
 }
 
-.messageSender__option>h3 {
+.postavi__dugme>h3 {
     font-size: medium;
     margin-left: 10px;
 }
 
-.messageSender__option:hover {
+.postavi__dugme:hover {
     background-color: #eff2f5;
     border-radius: 20px;
 }
