--- a/client/src/Components/Novosti/Prica/Prica.css
+++ b/client/src/Components/Novosti/Prica/Prica.css
@@ -1,4 +1,4 @@
-.story {
+.prica {
     position: relative;
     background-position: center center;
     background-size: cover;
@@ -12,16 +12,16 @@
     transition: transform 100ms ease-in;
 }
 
-.story:hover {
+.prica:hover {
     transform: scale(1.07);
 }
 
-.story__avatar {
+.prica__avatar {
     margin: 10px;
     border: 5px solid #2e81f4;
 }
 
-.story>h4 {
+.prica>h4 {
     position: absolute;
     bottom: 20px;
     left: 20px;
