--- a/client/src/Components/PrijateljiTraka/PrijateljiTraka.css
+++ b/client/src/Components/PrijateljiTraka/PrijateljiTraka.css
@@ -1,10 +1,11 @@
-.friendsBar {
+.prijateljiTraka {
     padding: 5px 10px;
     flex: 0.33;
     max-width: 350px;
 }
 
-.friendsBar>p {
+.prijateljiTraka>p {
+    margin-bottom: 10px;
     margin-left: 10px;
     font-size: large;
     font-weight: 650;
