--- a/client/src/Components/ProfilnaStranica/ProfilnaStranica.css
+++ b/client/src/Components/ProfilnaStranica/ProfilnaStranica.css
@@ -48,6 +48,7 @@
   width: 180px;
   height: 180px;
   border-radius: 90px;
+  object-fit: cover;
 }
 
 .profilnaSlika:hover {
@@ -121,7 +122,7 @@
   color: #1877f2;
 }
 
-.hide{
+.hide {
   display: none;
 }
 
