--- a/client/src/Components/Novosti/Prica/Prica.css
+++ b/client/src/Components/Novosti/Prica/Prica.css
@@ -23,7 +23,7 @@
 
 .prica>h4 {
     position: absolute;
-    bottom: 20px;
+    bottom: 0px;
     left: 20px;
-    color: white;
+    color: black;
 }
